@@ -2,7 +2,8 @@ Revision history for Catmandu-SRU
 
 {{$NEXT}}
   - Adding support for namespace prefixes declared in the SRU response header
-  
+  - Adding a MODS parser 
+
 0.038  2014-10-21 22:56:17 CEST
   - Added missing test requirement Test::Exception
 
